docs: pin-first for templates, manifests and version parsing; backlog B13-B18
Phase 6, closing audit finding M-A. Two lines in the root CLAUDE.md's
Refactor discipline:

- Shell templates, manifests and version parsing get their test written and
  observed failing first. The rule is not different there; the failure mode
  is -- they produce a plausible value rather than an error, so they get
  verified by hand and pinned afterwards, if at all. Three instances across
  two audits, and a measured cost: 24 wasted boots, 820 mis-attributed
  NeoForge versions.
- A test that only asserts shape is not a pin. Prefer executing the unit,
  and confirm the test fails before the fix -- a teeth-check silently passed
  twice in this session because a mis-indented edit left the "broken" run
  unmodified.

Also backlogs six items found while executing the plan but outside its
phases: B13 the fish/.ps1 template changes unverified by execution (the
gated matrix IT has not run since), B14 HostProcessServerRunner sharing the
wall-clock deadline B9 fixed only for containers, B15 the loader-cache
marker not recording which template produced an install, B16 the checked-in
test properties still carrying machine-specific absolute paths, B17
.gitignore hiding new server_files resources, B18 an install console wiped
by the next attempt on that tuple.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>